fix: tighten tool rehydration and JSON parsing